# ros2_object_msgs

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
msg/: AgeGenderStamped.msg  EmotionsStamped.msg  HeadPoseStamped.msg  LicensePlateStamped.msg  ObjectInBox.msg  ObjectInBox3D.msg  Objects.msg  ObjectsInBoxes.msg  PersonsStamped.msg  VehicleAttribsStamped.msg
srv/: ClassifyObject.srv  DetectObject.srv
